<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/quit_game_msg"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_score"
                android:layout_marginEnd="10dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_score"
                android:layout_marginStart="10dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="serif-monospace"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>