<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:cardElevation="5dp"
        app:cardBackgroundColor="#19000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_actionbar">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/menu"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:fontFamily="serif-monospace"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap,UselessParent">

        <Button
            android:id="@+id/keep_going"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:background="@drawable/shape_score"
            android:text="@string/keep_going"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:background="@drawable/shape_score"
            android:text="@string/new_game"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            android:visibility="gone"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:background="@drawable/shape_score"
            android:text="@string/try_again"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            android:visibility="gone"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/challenges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:background="@drawable/shape_score"
            android:text="@string/challenges"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/exit_challenges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:background="@drawable/shape_score"
            android:text="@string/exit_challenges"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            android:visibility="gone"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_score"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:padding="2.5dp"
            android:text="@string/how_to_play"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:fontFamily="serif-monospace"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/quit_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_score"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="2.5dp"
            android:text="@string/quit_game"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:fontFamily="serif-monospace"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/sound_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/sound_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_sound_on"
                android:layout_marginBottom="1.5dp"
                android:background="@drawable/shape_score"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/sound_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="Sound On"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                tools:ignore="HardcodedText,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vibrate_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/vibrate_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/ic_vibration_on"
                android:layout_marginBottom="1.5dp"
                android:background="@drawable/shape_score"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vibrate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="Vibration On"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                tools:ignore="HardcodedText,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/share_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginBottom="1.5dp"
                android:src="@drawable/ic_share"
                android:background="@drawable/shape_score"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/share_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="Share App"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                tools:ignore="HardcodedText,NestedWeights" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>