<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap,UselessParent">

        <TextView
            android:id="@+id/you_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/you_win"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <LinearLayout
            android:id="@+id/challenge_no_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/shape_score"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mode_tv"
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="Challenge"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:ignore="HardcodedText,NestedWeights"/>

            <TextView
                android:id="@+id/challenge_no"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal|top"
                android:text="1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="35sp"
                tools:ignore="HardcodedText,NestedWeights"/>

        </LinearLayout>

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:background="@drawable/shape_score"
            android:drawableTop="@drawable/ic_upload"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/play_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_score"
            android:drawableTop="@drawable/ic_replay"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:text="@string/play_again"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:fontFamily="serif-monospace"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/next_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_score"
            android:drawableTop="@drawable/ic_next"
            android:text="Next Challenge"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/exit_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_score"
            android:drawableTop="@drawable/ic_exit"
            android:text="Exit Challenge"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22.5sp"
            android:textAllCaps="false"
            android:fontFamily="serif-monospace"
            tools:ignore="HardcodedText"/>

    </LinearLayout>

</RelativeLayout>